--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -182,7 +182,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, background 0.3s ease, color 0.3s ease;
     text-decoration: none;
 }
 
